Improve logging and fix deps