@@ -1,9 +1,12 @@
 package me.vibing.tcpshield;
 
 import net.fabricmc.api.ModInitializer;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
@@ -11,27 +14,28 @@ import java.util.stream.Collectors;
 
 public class TCPShield implements ModInitializer {
 
+    private static final Logger LOGGER = LoggerFactory.getLogger("TCPShield");
     public static final List<String> ALLOWED_IP_RANGES = new ArrayList<>();
 
     @Override
     public void onInitialize() {
-        // Fetch list of IPs from the specified URLs
         List<String> ipRanges = fetchIpRanges("https://tcpshield.com/v4/");
         ipRanges.addAll(fetchIpRanges("https://tcpshield.com/v4-cf/"));
 
-        // Add the fetched IP ranges to the allowed IP ranges list
         ALLOWED_IP_RANGES.addAll(ipRanges);
+
+        LOGGER.info("Successfully updated TCPShield IP ranges.");
     }
 
     private List<String> fetchIpRanges(String urlString) {
         List<String> ipRanges = new ArrayList<>();
         try {
-            URL url = new URL(urlString);
+            URL url = new URI(urlString).toURL();
             try (BufferedReader reader = new BufferedReader(new InputStreamReader(url.openStream()))) {
                 ipRanges = reader.lines().collect(Collectors.toList());
             }
         } catch (Exception e) {
-            System.out.println("Failed to fetch IP ranges from " + urlString + ": " + e.getMessage());
+            LOGGER.error("Failed to fetch IP ranges from {}: {}", urlString, e.getMessage());
         }
         return ipRanges;
     }
